src/objects/Blocking_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Blocking Details</relationshipLabel>
        <relationshipName>Blocking_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked_with_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked with Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blocked_without_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked without Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blocking_Date__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blocking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blocking_Information__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Blocked&apos;), &apos;This record has been Blocked by &apos; + CreatedBy.FirstName + CreatedBy.LastName + &apos;.&apos;, &apos;This record has been Released by &apos; + CreatedBy.FirstName + CreatedBy.LastName + &apos;.&apos; ) 
+ if( (ISPICKVAL(Status__c , &apos;Blocked&apos;) &amp;&amp; ( $User.Id != CreatedById)), &apos;You do not have the necessary permissions to modify the status&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blocking Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Number__c</fullName>
        <label>Cheque Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClusterName__c</fullName>
        <formula>Unit__r.TowerName__r.Zone_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClusterName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrument_Date__c</fullName>
        <label>Instrument Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Blocking Details</relationshipLabel>
        <relationshipName>Blocking_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonMobilePhone__c</fullName>
        <label>Preferred Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Person_Email__c</fullName>
        <label>Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>Unit__r.TowerName__r.Zone_Name__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Comments__c</fullName>
        <label>Unblock Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Email__c</fullName>
        <label>Sales Manager Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <label>Sales Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Token_Amount__c</fullName>
        <label>Token Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TowerName__c</fullName>
        <formula>Unit__r.TowerName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TowerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <formula>Unit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Blocking Details</relationshipLabel>
        <relationshipName>Blocking_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Blocking Detail</label>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Blocking Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocking Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Modification_Of_Unit_Details</fullName>
        <active>true</active>
        <description>Stop the users from modifying the unit details on existing blocking details record</description>
        <errorConditionFormula>AND( 
PRIORVALUE(Unit__c) &lt;&gt; null, 
ISCHANGED(Unit__c) 
)</errorConditionFormula>
        <errorMessage>Unit details can&apos;t be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restricting_multiblocking_of_a_unit</fullName>
        <active>true</active>
        <description>This unit is already blocked by someone. Please contact the admininstrator for more details.</description>
        <errorConditionFormula>AND (ISPICKVAL(Unit__r.Unit_Status__c,&apos;Blocked&apos;),ISPICKVAL( Status__c, &apos;Blocked&apos;))</errorConditionFormula>
        <errorMessage>Restricting to one blocking request per unit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UnBlock_Unit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Blocked&apos;), 
OR(ISPICKVAL(Opportunity__r.StageName , &apos;Booked&apos;), 
ISPICKVAL(Opportunity__r.StageName , &apos;Sold&apos;), 
ISPICKVAL(Opportunity__r.StageName , &apos;Cancelled&apos;), 
ISPICKVAL(Opportunity__r.StageName , &apos;Closed Lost&apos;)) 
)</errorConditionFormula>
        <errorMessage>Please Check Opportunity Stage It Must Not Be [Booked,Sold,Cancelled,Closed Lost].</errorMessage>
    </validationRules>
</CustomObject>